# sagemaker-message-api

./: Cargo.toml  Dockerfile  Makefile  README.md
config/: endpoints.yaml
deployments/k8s/base/: deployment.yaml  ingress.yaml  kustomization.yaml  service.yaml
src/: chat_template.rs  endpoint_loader.rs  main.rs  sagemaker_endpoint_loader.rs  types.rs
