[package]
name = "msgapi"
description = ""
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "1.5.3"
aws-sdk-sagemakerruntime = "1.34.0"
axum = "0.7.5"
clap = { version = "4.5.7", features = ["derive"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.8.0", features = ["v1", "v4"] }
futures = "0.3.30"
tokio-stream = "0.1.15"
async-stream = "0.3.5"
tracing-opentelemetry = "0.24.0"
bytes = "1.6.0"
regex = "1.10.5"
futures-util = "0.3.30"
tempfile = "3.10.1"
anyhow = "1.0.86"
serde_yaml = "0.9.34"
opentelemetry = "0.23.0"
opentelemetry_sdk = { version = "0.23.0", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.16.0", features = ["grpc-tonic", "logs", "metrics"] }
log = "0.4.21"
aws-sdk-bedrockruntime = "1.45.0"
